tests/ui/issues/issue-20225.stderr
error[E0053]: method `call` has an incompatible type for trait
  --> $DIR/issue-20225.rs:6:43
   |
LL | impl<'a, T> Fn<(&'a T,)> for Foo {
   |          - this type parameter
LL |   extern "rust-call" fn call(&self, (_,): (T,)) {}
   |                                           ^^^^
   |                                           |
   |                                           expected `&'a T`, found type parameter `T`
   |                                           help: change the parameter type to match the trait: `(&'a T,)`
   |
   = note: expected signature `extern "rust-call" fn(&Foo, (&'a T,))`
              found signature `extern "rust-call" fn(&Foo, (T,))`

error[E0053]: method `call_mut` has an incompatible type for trait
  --> $DIR/issue-20225.rs:11:51
   |
LL | impl<'a, T> FnMut<(&'a T,)> for Foo {
   |          - this type parameter
LL |   extern "rust-call" fn call_mut(&mut self, (_,): (T,)) {}
   |                                                   ^^^^
   |                                                   |
   |                                                   expected `&'a T`, found type parameter `T`
   |                                                   help: change the parameter type to match the trait: `(&'a T,)`
   |
   = note: expected signature `extern "rust-call" fn(&mut Foo, (&'a T,))`
              found signature `extern "rust-call" fn(&mut Foo, (T,))`

error[E0053]: method `call_once` has an incompatible type for trait
  --> $DIR/issue-20225.rs:18:47
   |
LL | impl<'a, T> FnOnce<(&'a T,)> for Foo {
   |          - this type parameter
...
LL |   extern "rust-call" fn call_once(self, (_,): (T,)) {}
   |                                               ^^^^
   |                                               |
   |                                               expected `&'a T`, found type parameter `T`
   |                                               help: change the parameter type to match the trait: `(&'a T,)`
   |
   = note: expected signature `extern "rust-call" fn(Foo, (&'a T,))`
              found signature `extern "rust-call" fn(Foo, (T,))`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0053`.
